--- a/acmicpc.net/.vscode/settings.json
+++ b/acmicpc.net/.vscode/settings.json
@@ -7,6 +7,7 @@
         "algorithm": "cpp",
         "initializer_list": "cpp",
         "type_traits": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "utility": "cpp"
     }
 }
