--- a/acmicpc.net/.vscode/settings.json
+++ b/acmicpc.net/.vscode/settings.json
@@ -9,6 +9,7 @@
         "type_traits": "cpp",
         "xutility": "cpp",
         "utility": "cpp",
-        "chrono": "cpp"
+        "chrono": "cpp",
+        "iosfwd": "cpp"
     }
 }
