--- a/acmicpc.net/.vscode/settings.json
+++ b/acmicpc.net/.vscode/settings.json
@@ -91,6 +91,8 @@
         "xmemory": "cpp",
         "xstddef": "cpp",
         "xtr1common": "cpp",
-        "xtree": "cpp"
-    }
+        "xtree": "cpp",
+        "string_view": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
