--- a/acmicpc.net/.vscode/settings.json
+++ b/acmicpc.net/.vscode/settings.json
@@ -92,7 +92,8 @@
         "xstddef": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "string_view": "cpp"
+        "string_view": "cpp",
+        "__split_buffer": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
