골프스크립트 추가

--- a/acmicpc.net/Makefile
+++ b/acmicpc.net/Makefile
@@ -1,13 +1,24 @@
-CXX = g++
-CXXFLAGS = -std=c++17
+SHELL := /bin/bash
+CXX := g++
+CXXFLAGS := -std=c++17
 
-all: $(TARGET)
+.PHONY: all clean run
 
-$(TARGET):
-	$(CXX) -o $@ $< $(CXXFLAGS) && ./$(TARGET) 
+# 기본 target은 아무것도 하지 않음
+all:
 
-run: $(TARGET)
-	./$(TARGET)
+# .cpp 파일에 대응되는 컴파일 규칙
+%: %.cpp
+	$(CXX) $(CXXFLAGS) -o $@ $< && ./$(<:.cpp=)
 
+# .py 파일에 대응되는 컴파일 규칙
+%: %.py
+	python3 $<
+
+# .golfscript 파일에 대응되는 실행 규칙
+%: %.golfscript
+	ruby golfscript.rb $@.golfscript
+
+# run: $(TARGET) 필요 시 별도 구현 가능
 clean:
-	rm -f $(TARGET)
+	rm -f *.o *.out *.exe $(TARGETS)
